apps/obsidian-livesync-couchdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-livesync-couchdb
  labels:
    app: obsidian-livesync-couchdb
