apps/obsidian-livesync-couchdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync-couchdb
  namespace: obsidian-livesync-couchdb
  labels:
    app: obsidian-livesync-couchdb
spec:
  selector:
    app: obsidian-livesync-couchdb
  ports:
    - port: 5984
      targetPort: 5984
      protocol: TCP
      name: http
