apps/obsidian-livesync-couchdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-livesync-couchdb
  namespace: obsidian-livesync-couchdb
  labels:
    app: obsidian-livesync-couchdb
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: couchdb.home.prowe.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: couchdb.home.prowe.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-livesync-couchdb
                port:
                  number: 5984
  tls:
    - hosts:
        - couchdb.home.prowe.ca
      secretName: couchdb-tls
